force-app/main/default/objects/sf_devops__Submit_Component__c/sf_devops__Submit_Component__c.object-meta.xml
<CustomObject>
    <description>Represents a source component that has been submitted.</description>
    <label>Submit Component</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Submit Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submit Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>