force-app/main/default/objects/sf_devops__Submit_Component__c/fields/sf_devops__Source_Remote_Change__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Source_Remote_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Remote Change that this was sourced from.  This might be empty if the commit did not originate in the dev ops center.</description>
    <label>Source Remote Change</label>
    <referenceTo>sf_devops__Remote_Change__c</referenceTo>
    <relationshipLabel>Submit Components</relationshipLabel>
    <relationshipName>Submit_Components</relationshipName>
    <type>Lookup</type>
</CustomField>